deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zent
  labels:
    app.kubernetes.io/name: zent
